# nittei

./: .gitignore  Cargo.toml  TODO  Trunk.toml  clean.sh  index.html
src/: app.rs  consts.rs  home.rs  login.rs  main.rs  nav.rs  register.rs  timers.rs  track.rs  util.rs  verify.rs
src/home/: action.rs  what.rs  why.rs
style/: desktop.sass  home_desktop.sass  home_mobile.sass  input.sass  login_desktop.sass  login_mobile.sass  mobile.sass  nav_desktop.sass  nav_mobile.sass  palette.sass  register_desktop.sass  register_mobile.sass  text.sass  verify_desktop.sass  verify_mobile.sass
