[package]
name = "nittei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "~0.18"
yew-router = "~0.15"
gloo = "~0.4"
nittei-common = {version="~0.1", git="https://github.com/aftix/nittei-common"}
qr_code = "~1.1"
passwords = {version="~3.1", features=["common-password"]}
email-address-parser = "~1.0"
sanitize_html = "~0.7"
web-sys = "~0.3"

[dependencies.getrandom]
features=["js"]
version="~0.2"
