[package]
name = "nittei"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = {version="~0.18", git="https://github.com/yewstack/yew"}
yew-router = {version="~0.15", git="https://github.com/yewstack/yew"}
gloo = {version="~0.4", features=["futures"]}
nittei-common = {version="~0.1.19", git="https://github.com/aftix/nittei-common"}
passwords = {version="~3.1", features=["common-password"]}
email-address-parser = "~1.0"
html-escape = "~0.2"
url-escape = "~0.1"
web-sys = {version="~0.3", features=["HtmlInputElement", "KeyboardEvent"]}
ron = "~0.7"
console-web = "~0.1"
reqwasm = "~0.2"
wasm-bindgen-futures = "~0.4"
serde = {version="~1.0", features=["derive"]}

[dependencies.getrandom]
features=["js"]
version="~0.2"

[profile.dev.package."*"]
codegen-units = 1
opt-level = "z"

[profile.release]
opt-level = "z"
